update cross contract

--- a/cross-token-system-contract/pom.xml
+++ b/cross-token-system-contract/pom.xml
@@ -52,7 +52,7 @@
 								<!-- server port -->
 								<argument>18081</argument>
 								<!-- whether to launch the server -->
-								<argument>false</argument>
+								<argument>true</argument>
 							</arguments>
 						</configuration>
 					</execution>
